--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header-landing">
         <div class="wrap-logo">
-            <img src="/img/logo1.png" alt="" class="logo-header">
+            <img src="img/logo1.png" alt="" class="logo-header">
         </div>
     </header>
 
